Add requires jdk.unsupported to module-info