@@ -1,3 +1,1 @@
 # dataset-access
-
-Run application with java switch "--add-modules jdk.unsupported" to allow direct-buffer access in netty layer
